# Master-Thesis

./: .gitignore  LICENSE  README.md
LaTeX/Criticism/: criticism.tex  criticism.toc  refs.bib
LaTeX/Report/: main.tex  refs.bib
Report/: refs.bib  report.aux  report.bbl  report.bcf  report.blg  report.fdb_latexmk  report.fls  report.out  report.tex
Workspace/: Update thresholding.ipynb
Workspace/Core work/: EWC_hard.ipynb  TODO  TODOs for Karthik  adel.py  encore_un_test.py  encore_un_test_to_be_called.py  executed_HPO.ipynb  executed_HPO_new.ipynb  executed_visualization.ipynb  greedy_HPO_GrowHess_two_layers_from_output_pMNIST_standard.ipynb  params_for_HPO copy.yaml  params_for_HPO.yaml  params_for_visualization.yaml  runnable_HPO.ipynb  runnable_HPO.py  runnable_visualization.ipynb  script_greedy_HPO.py  script_greedy_HPO_old_thresholding.py  script_task.py  script_task_old_thresholding.py  script_trial.py  script_trial_old_thresholding.py  script_various_seeds.py  scripted_transform.pt  test_caller.ipynb  un_autre_test.py  variables.pkl
Workspace/EWC/: EWC.ipynb
Workspace/GroHess/: GroHess.ipynb  preliminary.ipynb
Workspace/Preliminary work/Growth/TINY/tinypub-main/: .gitignore  pyproject.toml
Workspace/Preliminary work/Growth/TINY/tinypub-main/DEMO/CL/: CL with CIFAR10.ipynb
Workspace/Preliminary work/Growth/TINY/tinypub-main/DEMO/MLP/: MLP on MNIST.ipynb
Workspace/Preliminary work/Growth/TINY/tinypub-main/TINY/: GLOBALS.py  UTILS.py  mes_imports.py
Workspace/Preliminary work/Growth/TINY/tinypub-main/TINY/settings/: starting_architecture_RN18.py
(+350 files in other folders)
