[tool.poetry]
name = "tiny"
version = "0.1.0"
description = "Grow Neurons"
authors = ["Manon Verbockhaven"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.9.18"
pandas = "1.4.3"
scipy = "1.11.3"
tqdm = "4.64.0"
tabulate = "0.9.0"
jupyter = "^1.0.0"
matplotlib = "3.*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
